<resources>
    <string name="app_name">FingerHold</string>
    <string name="action_sign_in_short">Зарегистрироваться</string>
    <string name="email">Email</string>
    <string name="minimum_password">Пароль слишком короткий, введите минимум 6 цифр!</string>
    <string name="auth_failed">Не удалось войти, проверьте почту и пароль или зарегестрируйтесь.</string>
    <string name="change_email">изменить Email</string>
    <string name="change_password">изменить пароль</string>
    <string name="send_password_reset_email">отправить пароль на почту</string>
    <string name="remove_user">удалить пользователя</string>
    <string name="new_pass">новый пользователь</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Войти</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_phone">Телефон</string>
    <string name="hint_name">Полное имя</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Еще не зарегестрированы, зарегестрируйтесь прямо сейчас!</string>
    <string name="btn_link_to_login">Уже зарегестрированы? Войдите!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Забыли пароль?</string>
    <string name="btn_reset_password">Сбросить пароль</string>
    <string name="btn_back"><![CDATA[<< Назад]]></string>
    <string name="hint_new_email">новый Email</string>
    <string name="btn_change">Изменить</string>
    <string name="btn_send">Отправить</string>
    <string name="btn_remove">Удалить</string>
    <string name="btn_sign_out">Выйти</string>
    <string name="lbl_forgot_password">Забыли пароль?</string>
    <string name="forgot_password_msg">Нам нужен ваш Email что бы отправить инструкцию по востановлению пароля.</string>
    <string name="title_activity_maps">Карта</string>
    <string name="mainBtn">Играть</string>
    <string name="exit">Выйти</string>
    <string name="found_money">Вывести деньги</string>
    <string name="btn_privacy">Регистрируясь в этом приложении вы принимаете условия конфидициальности и использования</string>
    <string name="privacy_txt">Регистрируясь в этом приложении вы отказываетесь от каких-либо претензий, жалоб, недовольств, возмущений и прочих типов выражения собсвенной индивидуальности в адресс разработчика. Все данные пользователей храняться зашифрованными и не передаются 3-м лицам</string>
    <string name="liderboard">Лидеры</string>
    <string name="multiplayer">multiplayer</string>
    <string name="play_game">Играть</string>
    <string name="statistic">Статистика</string>
    <string name="menu">Меню</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>